--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -754,7 +754,7 @@ body.light-theme {
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 420px) {
   .nav__menu {
     padding: 1rem 1.5rem;
   }
@@ -798,10 +798,15 @@ body.light-theme {
   }
 
   .work__container {
-    justify-content: center;
-    grid-template-columns: repeat(1, max-content);
+    display: flex;
+    flex-direction: column;
+    gap: 2rem; /* Add some spacing between items */
+    align-items: center;
   }
 
+  .work__card {
+    width: 80%; /* Adjust the width of each work card */
+  }
   
 
   .work__item {
@@ -819,14 +824,14 @@ body.light-theme {
 
 }
 
-@media screen and (min-width: 435px) {
+@media screen and (min-width: 390px) {
   .work__container {
     justify-content:center;
     grid-template-columns: repeat(1, max-content);
   }
 
   .work__img {
-    width: 165px;
+    width:165px;
   }
 }
 
@@ -875,7 +880,7 @@ body.light-theme {
 
   .work__container {
     justify-content: center;
-    grid-template-columns: repeat(1, max-content);
+    /* grid-template-columns: repeat(1, max-content); */
   }
 
   .work__img {
@@ -906,7 +911,7 @@ body.light-theme {
  
 
 /* For large devices */
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 950px) {
   .container {
     margin-left: auto;
     margin-right: auto;
@@ -995,10 +1000,10 @@ body.light-theme {
   
   }
 
-  /* .work__container {
-    grid-template-columns: repeat(3, max-content);
+  .work__container {
+    grid-template-columns: repeat(2, max-content);
     gap: 3rem;
-  } */
+  }
 
   .work__card {
     padding: 1.25rem;
