--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1102,6 +1102,7 @@ body.light-theme {
   .contact__container_twitter {
     display: block;
     text-align: center;
+    margin-bottom: -3rem;
   }
   
   .contact__card,
@@ -1109,5 +1110,6 @@ body.light-theme {
     width: calc(80% - 4rem);
     margin: 0 auto;
     margin-bottom: 2rem;
+
   }
 }
